--- a/common-page.html
+++ b/common-page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" type"image/x-icon" href="https://image.flaticon.com/icons/svg/25/25694.svg">
   <title>menu</title>
   <link rel="stylesheet" href="style.css">
   </head>
