--- a/login-page.html
+++ b/login-page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="https://cdn1.vectorstock.com/i/1000x1000/50/30/black-lock-icon-in-modern-design-style-for-web-vector-26505030.jpg">
+  <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
   <title>LOGIN Page</title>
   <link rel="stylesheet" href="login-style.css">
 
