--- a/login-page.html
+++ b/login-page.html
@@ -13,7 +13,7 @@
 <h3>Log In</h3>
 <br><input type="text" name="" placeholder="user name"></br>
 <br><input type="password" name="" placeholder="password"></br>
-<br><button type="button" name="button">login</button></br>
+<br><input type="submit" name="" value"Login></br>
 </form>
 </div>
 </body>
