--- a/login-page.html
+++ b/login-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>LOGIN Page</title>
+  <title>LOGIN PAGE</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
