--- a/login-page.html
+++ b/login-page.html
@@ -11,8 +11,8 @@
 <div>
 <form class="active">
 <h3>Log In</h3>
-<br><input type="text" name="" placeholder="user name"></br>
-<br><input type="password" name="" placeholder="password"></br>
+<br><input type="text" name="" placeholder="user name" required></br>
+<br><input type="password" name="" placeholder="password" required></br>
 <br><input type="submit" value="Login"></br>
 </form>
 </div>
