--- a/login-page.html
+++ b/login-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>LOGIN PAGE</title>
+  <title>LOGIN Page</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
@@ -11,10 +11,16 @@
 <div>
 <form class="active">
 <h3>Log In</h3>
-<br><input type="text" name="" placeholder="user name" required></br>
-<br><input type="password" name="" placeholder="password" required></br>
-<br><input type="submit" value="Login"></br>
+<input type="text" name="" placeholder="user name" required>
+<input type="password" name="" placeholder="password" required>
+<input type="submit" value"login">
 </form>
+</div>
+<div>
+  <a href="#">Forgot password</a>
+</div>
+<div class="signup">
+  <a href="sign-up page.html">sign up</a>
 </div>
 </body>
 </html>
