--- a/login-page.html
+++ b/login-page.html
@@ -13,14 +13,14 @@
 <h3>Log In</h3>
 <input type="text" name="" placeholder="user name" required>
 <input type="password" name="" placeholder="password" required>
-<input type="submit" value"login">
+<input type="submit" value="login">
 </form>
 </div>
 <div>
   <a href="#">Forgot password</a>
 </div>
 <div class="signup">
-  <a href="sign-up page.html">sign up</a>
+  <a href="sign-page.html">sign up</a>
 </div>
 </body>
 </html>
