--- a/sign-up page.html
+++ b/sign-up page.html
@@ -15,8 +15,11 @@
 <input type="text" name="" placeholder="email id" required>
 <input type="password" name="" placeholder="new password" required>
 <input type="password" name="" placeholder=" confirm new password" required>
-<input type="submit" value"sign up">
+<input type="submit" value="sign up">
 </form>
+<div class="login">
+  <a href="login-page.html">login</a>
+</div>
 </div>
 </body>
-</html>
+</html
