--- a/login-page.html
+++ b/login-page.html
@@ -20,7 +20,7 @@
   <a href="#">Forgot password</a>
 </div>
 <div class="signup">
-  <a href="sign-page.html">sign up</a>
+  <a href="sign-up page.html">sign up</a>
 </div>
 </body>
 </html>
