--- a/login-page.html
+++ b/login-page.html
@@ -17,7 +17,7 @@
 </form>
 </div>
 <div>
-  <a href="#">Forgot password</a>
+  <a href="forgot page.html">Forgot password</a>
 </div>
 <div class="signup">
   <a href="sign-up page.html">sign up</a>
