--- a/login-page.html
+++ b/login-page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>LOGIN PAGE</title>
+  <title>LOGIN</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
@@ -17,10 +17,10 @@
 </form>
 </div>
 <div>
-  <a href="forgotpage.html">Forgot password</a>
+  <a href="forgot.html">Forgot password</a>
 </div>
 <div class="signup">
-  <a href="sign-up page.html">sign up</a>
+  <a href="sign-up.html">sign up</a>
 </div>
 </body>
 </html>
