--- a/common.html
+++ b/common.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="shortcut icon" type"image/x-icon" href="https://image.flaticon.com/icons/svg/25/25694.svg">
-  <title>Home page</title>
+  <title>Home</title>
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
