--- a/sign-up page.html
+++ b/sign-up page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>sign-up Page</title>
+  <title>sign-up</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
@@ -18,7 +18,7 @@
 <input type="submit" value="sign up">
 </form>
 <div class="login">
-  <a href="login-page.html">login</a>
+  <a href="login.html">login</a>
 </div>
 </div>
 </body>
