Update and rename forgotpage.html to forgot.html

--- a/forgot.html
+++ b/forgot.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>forgot password Page</title>
+  <title>forgot password</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
