--- a/reset password.html
+++ b/reset password.html
@@ -16,7 +16,7 @@
 </form>
 </div>
 <div class="signup">
-  <a href="login-page.html">login</a>
+  <a href="login.html">login</a>
 </div>
 </body>
 </html>
