--- a/common.html
+++ b/common.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="shortcut icon" type"image/x-icon" href="https://image.flaticon.com/icons/svg/25/25694.svg">
-  <title>Home</title>
+  <link rel="shortcut icon" type"image/x-icon" href="https://image.flaticon.com/icons/svg/25/25694.svg">
+  <title>
+    home page
+  </title>
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="menu-bar">
       <ul>
-        <li><a href="#">living room</a></li>
-        <li><a href="#">Master Bed-room</a></li>
-        <li><a href="#">kids Bed-room</a></li>
-        <li><a href="#">Dining</a></li>
-        <li><a href="#">kitchen</a></li>
-        <li><a href="#">Balcony</a></li>
+        <li><a href="livingroom.html">living room</a></li>
+        <li><a href="masterbedroom.html">Master Bed-room</a></li>
+        <li><a href="kidsbedroom.html">kids Bed-room</a></li>
+        <li><a href="dining.html">Dining</a></li>
+        <li><a href="kitchen.html">kitchen</a></li>
         </ul>
-      </div>
-      <div class="img">
-
       </div>
     </body>
 
