--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Welcome to Home Automation</h1>
 <div>
-<form class="active">
+<form class="active" action="login" method="post">
 <h3>Log In</h3>
 <input type="text" name="" placeholder="user name" required>
 <input type="password" name="" placeholder="password" required>
