--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
 <body>
 <h1>Welcome to Home Automation</h1>
 <div>
-<form class="active" action="login" method="post">
+    <form class="active" action="login" method="POST">
 <h3>Log In</h3>
-<input type="text" name="" placeholder="user name" required>
-<input type="password" name="" placeholder="password" required>
+<input type="text" name="username" placeholder="user name" required>
+<input type="password" name="password" placeholder="password" required>
 <input type="submit" value="login">
 </form>
 </div>
