--- a/login.html
+++ b/login.html
@@ -2,25 +2,25 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.freepik.com/free-icon/lock-circle_318-9883.jpg">
-  <title>LOGIN</title>
+  <title>LOGIN Page</title>
   <link rel="stylesheet" href="login-style.css">
 
 </head>
 <body>
 <h1>Welcome to Home Automation</h1>
 <div>
-    <form class="active" action="login" method="POST">
+<form class="active">
 <h3>Log In</h3>
-<input type="text" name="username" placeholder="user name" required>
-<input type="password" name="password" placeholder="password" required>
+<input type="text" name="" placeholder="user name" required>
+<input type="password" name="" placeholder="password" required>
 <input type="submit" value="login">
 </form>
 </div>
 <div>
-  <a href="forgot.html">Forgot password</a>
+  <a href="forgot page.html">Forgot password</a>
 </div>
 <div class="signup">
-  <a href="sign-up.html">sign up</a>
+  <a href="sign-up page.html">sign up</a>
 </div>
 </body>
 </html>
