--- a/livingroom.html
+++ b/livingroom.html
@@ -5,17 +5,48 @@
   <title>
     living room
   </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
   </head>
   <body>
     <div class="menu-bar">
       <ul>
         <li><a href="#">Television</a></li>
         <li><a href="#">Fan</a></li>
-        <li><a href="#">Tube light1</a></li>
-        <li><a href="#">Tube light2</a></li>
+        <li><a href="#">Light 1</a></li>
+        <li><a href="#">Light 2</a></li>
         <li><a href="#">A.C</a></li>
         </ul>
+      </div>
+      <div class="container">
+           <label class="switch">
+             <input type="hidden" value="0" name="selfdestruct">
+             <input type="checkbox" value="1" name="selfdestruct" checked>
+             <span class="slider"></span>
+           </label>
+      </div>
+      <div class="container1">
+           <label class="switch">
+             <input type="checkbox" checked>
+             <span class="slider"></span>
+           </label>
+      </div>
+      <div class="container2">
+           <label class="switch">
+             <input type="checkbox" checked>
+             <span class="slider"></span>
+           </label>
+      </div>
+      <div class="container3">
+           <label class="switch">
+             <input type="checkbox" checked>
+             <span class="slider"></span>
+           </label>
+      </div>
+      <div class="container4">
+           <label class="switch">
+             <input type="checkbox" checked>
+             <span class="slider"></span>
+           </label>
       </div>
     </body>
 
