--- a/livingroom.html
+++ b/livingroom.html
@@ -8,43 +8,45 @@
   <link rel="stylesheet" href="style1.css">
   </head>
   <body>
+    <div>
+      <a href="common-page.html"><img src="https://image.flaticon.com/icons/svg/0/340.svg" height="20px" width="40px"></a>
+    </div>
     <div class="menu-bar">
       <ul>
-        <li><a href="#">Television</a></li>
-        <li><a href="#">Fan</a></li>
-        <li><a href="#">Light 1</a></li>
-        <li><a href="#">Light 2</a></li>
-        <li><a href="#">A.C</a></li>
+        <li><a >Television</a></li>
+        <li><a>Fan</a></li>
+        <li><a >Light 1</a></li>
+        <li><a >Light 2</a></li>
+        <li><a >A.C</a></li>
         </ul>
       </div>
-      <div class="container">
+      <div id="container">
            <label class="switch">
-             <input type="hidden" value="0" name="selfdestruct">
-             <input type="checkbox" value="1" name="selfdestruct" checked>
+           <input type="checkbox" onclick="change()" id="abc">
              <span class="slider"></span>
            </label>
       </div>
       <div class="container1">
            <label class="switch">
-             <input type="checkbox" checked>
+             <input type="checkbox" >
              <span class="slider"></span>
            </label>
       </div>
       <div class="container2">
            <label class="switch">
-             <input type="checkbox" checked>
+             <input type="checkbox" >
              <span class="slider"></span>
            </label>
       </div>
       <div class="container3">
            <label class="switch">
-             <input type="checkbox" checked>
+             <input type="checkbox" >
              <span class="slider"></span>
            </label>
       </div>
       <div class="container4">
            <label class="switch">
-             <input type="checkbox" checked>
+             <input type="checkbox" >
              <span class="slider"></span>
            </label>
       </div>
